--- a/templates/index.html
+++ b/templates/index.html
@@ -2,15 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/index.js" defer></script>
     <title>index</title>
 </head>
 <body>
-    <form enctype="multipart/form-data" action="/audio" method="post">
-        <label for="audio">Put your audio file here</label>
+    <div id="git-cont">
+        <img src="images/github.png" width="50" height="50" id="github" onclick="window.open('https://github.com/IcedCoffeeWithTea/Silence-remover')"/>
+    </div>
+    <form enctype="multipart/form-data" action="/audio" method="post" id="audio-f">
+        <label for="audio" id="audio-cont">
+            <label for="audio" id="audio-label">Put your audio file here</label>
+            <input name="audio" id="audio" type="file" accept="audio/*" required>
+        </label>
         <br>
-        <input name="audio" id="audio" type="file" accept="audio/*" required>
-        <br>
-        <input type="submit" value="Submit">
+        <input type="submit" value="Submit" id="sbmt-btn">
     </form>
 </body>
 </html>
